inou/prp/tests/errors/mem_multidim.prp
/*
:name: mem_multidim
:type: error
:error: 2 dimension\(s\) but the access supplies 1
:tolg: 1
*/

// 2f-mem_multidim — multi-dimensional memories lower with flattened
// row-major addressing, but every access must supply one index per
// dimension (there is no partial-row select on a runtime memory).
mod f(a:u8, i:u3, j:u2) -> (z:u8@[0]) {
  reg t:[2][4]u8 = nil
  t[i] = a
  z = t[i][j]
}
